force-app/main/default/objects/AdminTrackExclusion__mdt/AdminTrackExclusion__mdt.object-meta.xml
<CustomObject>
    <label>Admin Track Exclusion</label>
    <pluralLabel>Admin Track Exclusions</pluralLabel>
    <description>Exclusion rules that filter out specific sections, actions, or users from AdminTrack audit logging and Slack notifications</description>
</CustomObject>