force-app/main/default/objects/AdminTrackExclusion__mdt/fields/ExclusionType__c.field-meta.xml
<CustomField>
    <fullName>ExclusionType__c</fullName>
    <label>Exclusion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of exclusion: Section, Action, or User</description>
</CustomField>