force-app/main/default/objects/AdminTrackExclusion__mdt/fields/ExclusionValue__c.field-meta.xml
<CustomField>
    <fullName>ExclusionValue__c</fullName>
    <label>Exclusion Value</label>
    <type>Text</type>
    <length>255</length>
    <description>Value to match: section name, action string, or User ID (15 or 18 char)</description>
</CustomField>