force-app/main/default/objects/AdminTrackExclusion__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Enable or disable this individual exclusion rule</description>
</CustomField>